k8s/deployment.yml

apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: crawler-deployment
  namespace: services
  labels:
    app: crawler
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crawler
  template:
    metadata:
      labels:
        app: crawler
    spec:
      serviceAccount: crawler-reader
      containers:
      - name: crawler
        image: alexlokshin/crawler:TRAVIS_BUILD_NUMBER
        ports:
        - containerPort: 3000
