k8s/k8s.yml

apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: crawler-deployment
  namespace: services
  labels:
    app: crawler
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crawler
  template:
    metadata:
      labels:
        app: crawler
    spec:
      containers:
      - name: crawler
        image: alexlokshin/crawler:TRAVIS_BUILD_NUMBER
        ports:
        - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: crawler-service
spec:
  selector:
    app: crawler
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
