k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: crawler-ingress
  namespace: services
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /crawler
        backend:
          serviceName: crawler-service
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: crawler-tls-ingress
  namespace: services
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - www.avsatum.com
    secretName: crawler-tls
  rules:
  - host: www.avsatum.com
    http:
      paths:
      - path: /
        backend:
          serviceName: crawler-service
          servicePort: 80
